@@ -20,6 +20,8 @@ Bug fixes:
    the Tags: field. (LP: #505671)
  - test/crash: Update expected core dump flags for changed rlimit behaviour in
    Linux 2.6.32.
+ - launchpad.py: Fix marking of 'checked for duplicate' for bugs with upstream
+   tasks.
 
 1.11 (2009-12-23)
 -----------------
